[package]
name = "microbit-serial"
version = "0.1.0"
authors = ["Liamolucko <liampm32@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf52833-hal = "0.12.0"
panic-semihosting = "0.5.6"
cortex-m-rt = "0.6.13"
